k8s/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: task-app
  template:
    metadata:
      labels:
        app: task-app
    spec:
      containers:
      - name: app
        image: sonnyrranger/task-app:latest
        ports:
        - containerPort: 8000
