k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-service
spec:
  selector:
    app: task-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: NodePort
